<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:padding="16dp">

    <ImageView
        android:id="@+id/metacard_thumbnail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/light_gray"
        android:contentDescription="@string/feed_thumbnail_description"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/metacard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/metacard_thumbnail"
        android:layout_toStartOf="@id/metacard_thumbnail"
        android:text="@string/feed_sample_title"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/metacard_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/metacard_title"
        android:layout_toLeftOf="@id/metacard_thumbnail"
        android:layout_toStartOf="@id/metacard_thumbnail"
        android:text="@string/feed_sample_description" />


    <TextView
        android:id="@+id/metacard_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/metacard_thumbnail"
        android:layout_alignLeft="@id/metacard_thumbnail"
        android:layout_alignRight="@id/metacard_thumbnail"
        android:layout_alignStart="@id/metacard_thumbnail"
        android:layout_below="@+id/metacard_thumbnail"
        android:gravity="center"
        android:text="@string/feed_sample_date"
        android:textSize="12sp" />

</RelativeLayout>