<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/feed_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true">

                    <ImageButton
                        android:id="@+id/feed_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_action_share" />

                    <Button
                        android:id="@+id/feed_product"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawableTop="@drawable/ic_action_download"
                        android:textSize="12sp"
                        android:textColor="@color/half_black"
                        android:text="@string/metacard_sample_size"/>


                    <ImageButton
                        android:id="@+id/feed_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_action_picture"
                        android:visibility="gone" />

                    <ImageButton
                        android:id="@+id/feed_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_action_play_over_video"
                        android:visibility="gone" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/feed_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_action_important" />

                <ImageButton
                    android:id="@+id/feed_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_action_map"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/feed_star"
                    android:layout_toLeftOf="@+id/feed_star"/>

            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="#c0c0c0" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/feed_thumbnail"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@color/light_gray"
                    android:contentDescription="@string/feed_thumbnail_description"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/feed_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@id/feed_thumbnail"
                    android:layout_toLeftOf="@id/feed_thumbnail"
                    android:text="@string/feed_sample_title"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/feed_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/feed_title"
                    android:layout_toStartOf="@id/feed_thumbnail"
                    android:layout_toLeftOf="@id/feed_thumbnail"
                    android:text="@string/feed_sample_description" />

                <TextView
                    android:id="@+id/feed_site"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/feed_description"
                    android:layout_marginTop="15dp"
                    android:text="@string/feed_sample_site"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/feed_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/feed_thumbnail"
                    android:layout_alignRight="@id/feed_thumbnail"
                    android:layout_alignStart="@id/feed_thumbnail"
                    android:layout_alignLeft="@id/feed_thumbnail"
                    android:layout_below="@+id/feed_thumbnail"
                    android:gravity="center"
                    android:text="@string/feed_sample_date"
                    android:textSize="12sp" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>